--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/1.png');
+    background-image: url('img/plano\ de\ fundo.jpg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
@@ -112,7 +112,7 @@ h2 {
 }
 
 #contato {
-    background-image: url('img/1.png');
+    background-image: url('img/plano\ de\ fundo.jpg');
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
