--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 
 :root {
     --verde: #606c38;
-    --alto-contraste-fundo: #000000;
-    --alto-contraste-texto: #ffffff;
+    --alto-contraste-fundo: #283618;
+    --alto-contraste-texto: #fefae0;
     --alto-contraste-link: #90a955;
 }
 
@@ -17,11 +17,9 @@ header {
     background-color: #ffffff;
 }
 
-
 section {
     padding-bottom: 5rem;
 }
-
 
 .nav-link {
     color: #CB6D43;
@@ -50,14 +48,12 @@ section {
     height: auto;
 }
 
-
 .esquerda-conteudo {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
 }
-
 
 .botao-inicio {
     background-color: var(--verde);
@@ -73,14 +69,13 @@ section {
     text-shadow: -5px 5px var(--verde);
 }
 
-
 #tropicalia {
     position: relative;
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/flor.png') top right no-repeat,
-        url('img/flor-esquerda.png') bottom left no-repeat;
+    background: url('img/Skate\ Q1.png') top right no-repeat,
+        url('img/Skate\ Q3.png') bottom left no-repeat;
     background-size: 180px 180px;
     /* Ajuste o tamanho conforme necessário */
 }
@@ -94,7 +89,6 @@ section {
     /* Garante que o conteúdo fica acima das imagens do background */
 }
 
-
 h2 {
     font-family: 'Lemon', serif;
     font-size: 2.5em;
@@ -103,12 +97,12 @@ h2 {
 }
 
 #galeria {
-    background-color: #FAF4F4;
+    background-color: #fefae0;
 
 }
 
 .fundo-galeria {
-    background: url('img/flor-bottom-direita.png') bottom right no-repeat;
+    background: url('img/Skate\ Q4.png') bottom right no-repeat;
     background-size: 180px 180px;
 }
 
@@ -138,8 +132,9 @@ h2 {
 }
 
 .form-control {
-    background-color: #F1EDEF;
+    background-color: #fefae0;
 }
+
 .menu-acessibilidade{
     position: fixed;
     top:2rem;
@@ -161,6 +156,7 @@ h2 {
 .opcoes-acessibilidade button{
     margin-bottom: 5px;
 }
+
 .apresenta-lista{
     display: none;
 }
@@ -195,6 +191,7 @@ h2 {
 .alto-contraste #galeria {
     background-color: var(--alto-contraste-fundo);
 }
+
 .alto-contraste .fundo-galeria {
     background: none;
 }
